--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "express-API",
   "main": "index.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -12,7 +13,9 @@
     "mongoose": "^5.13.0",
     "mongoose-type-mail": "^1.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.12"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
